--- a/hero.html
+++ b/hero.html
@@ -9,13 +9,13 @@
 <body>
     <main>
       
-    <section class="hero">
-        <div class="container">
-        <h1  class="hero-titel">MODERN AND MINIMALIST FURNITURE FOR YOU</h1>
-        <div class="hero-img"></div>
-        <div class="hero-text-btn">
+    <section class="hero-section">
+        <div class="hero-container">
+        <h1  class="hero-titel">Modern and minimalist furniture for you</h1>
+        <div class="hero-container-background"></div>
+        <div class="hero-container-text-btn">
         <p class="hero-text">Add a touch of elegance to your space with handcrafted furniture pieces</p>
-        <button class="hero-btn">Subscribe</button>
+        <button type="button" class="hero-btn">Subscribe</button>
     </div>
     </div>
     </section>
