--- a/hero.html
+++ b/hero.html
@@ -12,11 +12,12 @@
     <section class="hero-section">
         <div class="hero-container">
         <h1  class="hero-titel">Modern and minimalist furniture for you</h1>
-        <div class="hero-container-background"></div>
+        <div class="hero-container-background">
         <div class="hero-container-text-btn">
         <p class="hero-text">Add a touch of elegance to your space with handcrafted furniture pieces</p>
         <button type="button" class="hero-btn">Subscribe</button>
     </div>
+</div>
     </div>
     </section>
 
