--- a/hero.html
+++ b/hero.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/hero-style.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/hero-style.css" />
+  </head>
+  <body>
     <main>
-      
-    <section class="hero-section">
+      <section class="hero-section">
         <div class="hero-container">
-        <h1  class="hero-titel">Modern and minimalist furniture for you</h1>
-        <div class="hero-container-background">
-        <div class="hero-container-text-btn">
-        <p class="hero-text">Add a touch of elegance to your space with handcrafted furniture pieces</p>
-        <button type="button" class="hero-btn">Subscribe</button>
-    </div>
-     </div>
-    </div>
-    </section>
-
-</main>
-    
-</body>
+          <h1 class="hero-titel">Modern and minimalist furniture for you</h1>
+          <div class="hero-container-text-btn">
+            <p class="hero-text">
+              Add a touch of elegance to your space with handcrafted furniture
+              pieces
+            </p>
+            <button type="button" class="hero-btn">Subscribe</button>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
