--- a/hero.html
+++ b/hero.html
@@ -20,6 +20,96 @@
           </div>
         </div>
       </section>
+      <section class="footer">
+        <div class="container-footer">
+          <div class="container-footer-adress-list">
+            <a class="footer-logo" href=""
+              ><svg class="footer-logo-svg" width="128" height="17">
+                <use
+                  class="footer-svg-logo"
+                  href="./img/symbol-defs.svg#icon-MINIMAL"
+                ></use>
+              </svg>
+            </a>
+            <ul class="footer-adress-list">
+              <li class="footer-adress-item">
+                <p class="footer-adress-text">Obolonsky Prospect, 14, Kyiv</p>
+              </li>
+              <li class="footer-adress-item">
+                <p class="footer-adress-text">Daily 10:00-21:00</p>
+              </li>
+            </ul>
+          </div>
+          <div class="container-footer-sections-list">
+            <ul class="footer-sections-list">
+              <li class="footer-sections-item">
+                <a href="" class="footer-sections-link">about us</a>
+              </li>
+              <li class="footer-sections-item">
+                <a href="" class="footer-sections-link">Our products </a>
+              </li>
+              <li class="footer-sections-item">
+                <a href="" class="footer-sections-link">Prices</a>
+              </li>
+              <li class="footer-sections-item">
+                <a href="" class="footer-sections-link">Bestsellers</a>
+              </li>
+              <li class="footer-sections-item">
+                <a href="" class="footer-sections-link">Reviews</a>
+              </li>
+            </ul>
+          </div>
+          <div class="container-footer-tel-list">
+            <ul class="footer-tel-list">
+              <li class="footer-tel-item">
+                <a class="footer-tel-link" href="">+380669384758</a>
+              </li>
+              <li class="footer-tel-item">
+                <a class="footer-tel-link" href="">+380679384758</a>
+              </li>
+            </ul>
+          </div>
+          <div class="container-minimal-link">
+            <a class="minimal-link" href="">minimal.furniture@gmail.com</a>
+          </div>
+        </div>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-link-social" href=""
+              ><svg class="footer-social-svg" width="40" height="40">
+                <use
+                  class="sociale-svg-footer"
+                  href="./img/symbol-defs.svg#icon-Vector"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-link-social" href=""
+              ><svg class="footer-social-svg" width="40" height="40">
+                <use
+                  class="sociale-svg-footer"
+                  href="./img/symbol-defs.svg#icon-Vector-2"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-link-social" href=""
+              ><svg class="footer-social-svg" width="40" height="40">
+                <use
+                  class="sociale-svg-footer"
+                  href="./img/symbol-defs.svg#icon-Vector-1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <a class="footer-link-policy" href=""
+          >By using this website, you agree to the Terms of Service and Privacy
+          Policy</a
+        >
+      </section>
     </main>
   </body>
 </html>
