--- a/hero.html
+++ b/hero.html
@@ -20,18 +20,37 @@
           </div>
         </div>
       </section>
+      <!------------FOOTER------------->
       <section class="footer">
-        <div class="container-footer">
-          <div class="container-footer-adress-list">
-            <a class="footer-logo" href=""
-              ><svg class="footer-logo-svg" width="128" height="17">
+        <div class="footer-container-main">
+          <div class="container-footer">
+            <a class="footer-logo link" href=""
+              ><svg class="footer-logo-svg" width="100" height="16">
                 <use
                   class="footer-svg-logo"
-                  href="./img/symbol-defs.svg#icon-MINIMAL"
+                  href="./img/symbol-defs.svg#icon-LOGO"
                 ></use>
               </svg>
             </a>
-            <ul class="footer-adress-list">
+            <ul class="footer-menu-list list">
+              <li class="footer-menu-item">
+                <a href="" class="footer-menu-link link">About us</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="" class="footer-menu-link link">Our products </a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="" class="footer-menu-link link">Prices</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="" class="footer-menu-link link">Bestsellers</a>
+              </li>
+              <li class="footer-sections-item">
+                <a href="" class="footer-menu-link link">Reviews</a>
+              </li>
+            </ul>
+
+            <ul class="footer-adress-list list">
               <li class="footer-adress-item">
                 <p class="footer-adress-text">Obolonsky Prospect, 14, Kyiv</p>
               </li>
@@ -39,76 +58,62 @@
                 <p class="footer-adress-text">Daily 10:00-21:00</p>
               </li>
             </ul>
-          </div>
-          <div class="container-footer-sections-list">
-            <ul class="footer-sections-list">
-              <li class="footer-sections-item">
-                <a href="" class="footer-sections-link">about us</a>
-              </li>
-              <li class="footer-sections-item">
-                <a href="" class="footer-sections-link">Our products </a>
-              </li>
-              <li class="footer-sections-item">
-                <a href="" class="footer-sections-link">Prices</a>
-              </li>
-              <li class="footer-sections-item">
-                <a href="" class="footer-sections-link">Bestsellers</a>
-              </li>
-              <li class="footer-sections-item">
-                <a href="" class="footer-sections-link">Reviews</a>
-              </li>
-            </ul>
-          </div>
-          <div class="container-footer-tel-list">
-            <ul class="footer-tel-list">
+
+            <ul class="footer-tel-list list">
               <li class="footer-tel-item">
-                <a class="footer-tel-link" href="">+380669384758</a>
+                <a class="footer-tel-link link" href="">+380669384758</a>
               </li>
               <li class="footer-tel-item">
-                <a class="footer-tel-link" href="">+380679384758</a>
+                <a class="footer-tel-link link" href="">+380679384758</a>
               </li>
             </ul>
+
+            <div class="container-minimal-link">
+              <a class="minimal-link link" href="./hero.html"
+                >minimal.furniture@gmail.com</a
+              >
+            </div>
           </div>
-          <div class="container-minimal-link">
-            <a class="minimal-link" href="">minimal.furniture@gmail.com</a>
-          </div>
+
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a class="footer-link-social link" href=""
+                ><svg class="footer-social-svg" width="28" height="28">
+                  <use
+                    class="sociale-svg-footer"
+                    href="./img/symbol-defs.svg#icon-Vector"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-link-social link" href=""
+                ><svg class="footer-social-svg" width="28" height="28">
+                  <use
+                    class="sociale-svg-footer"
+                    href="./img/symbol-defs.svg#icon-Vector-2"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-link-social link" href=""
+                ><svg class="footer-social-svg" width="28" height="28">
+                  <use
+                    class="sociale-svg-footer"
+                    href="./img/symbol-defs.svg#icon-Vector-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="footer-link-social" href=""
-              ><svg class="footer-social-svg" width="40" height="40">
-                <use
-                  class="sociale-svg-footer"
-                  href="./img/symbol-defs.svg#icon-Vector"
-                ></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-link-social" href=""
-              ><svg class="footer-social-svg" width="40" height="40">
-                <use
-                  class="sociale-svg-footer"
-                  href="./img/symbol-defs.svg#icon-Vector-2"
-                ></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-link-social" href=""
-              ><svg class="footer-social-svg" width="40" height="40">
-                <use
-                  class="sociale-svg-footer"
-                  href="./img/symbol-defs.svg#icon-Vector-1"
-                ></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <a class="footer-link-policy" href=""
-          >By using this website, you agree to the Terms of Service and Privacy
-          Policy</a
-        >
+        <p class="footer-link-policy link">
+          By using this website, you agree to the<a href="">
+            Terms of Service</a
+          >
+          and <a href="">Privacy Policy</a>
+        </p>
       </section>
     </main>
   </body>
