--- a/hero.html
+++ b/hero.html
@@ -21,99 +21,102 @@
         </div>
       </section>
       <!------------FOOTER------------->
+
       <section class="footer">
-        <div class="footer-container-main">
-          <div class="container-footer">
-            <a class="footer-logo link" href=""
-              ><svg class="footer-logo-svg" width="100" height="16">
-                <use
-                  class="footer-svg-logo"
-                  href="./img/symbol-defs.svg#icon-LOGO"
-                ></use>
-              </svg>
-            </a>
-            <ul class="footer-menu-list list">
-              <li class="footer-menu-item">
-                <a href="" class="footer-menu-link link">About us</a>
-              </li>
-              <li class="footer-menu-item">
-                <a href="" class="footer-menu-link link">Our products </a>
-              </li>
-              <li class="footer-menu-item">
-                <a href="" class="footer-menu-link link">Prices</a>
-              </li>
-              <li class="footer-menu-item">
-                <a href="" class="footer-menu-link link">Bestsellers</a>
-              </li>
-              <li class="footer-sections-item">
-                <a href="" class="footer-menu-link link">Reviews</a>
-              </li>
-            </ul>
+        <div class="gf">
+          <div class="footer-container-main">
+            <div class="container-footer">
+              <a class="footer-logo link" href=""
+                ><svg class="footer-logo-svg" width="100" height="16">
+                  <use
+                    class="footer-svg-logo"
+                    href="./img/symbol-defs.svg#icon-LOGO"
+                  ></use>
+                </svg>
+              </a>
+              <ul class="footer-menu-list list">
+                <li class="footer-menu-item">
+                  <a href="" class="footer-menu-link link">About us</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="" class="footer-menu-link link">Our products </a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="" class="footer-menu-link link">Prices</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="" class="footer-menu-link link">Bestsellers</a>
+                </li>
+                <li class="footer-sections-item">
+                  <a href="" class="footer-menu-link link">Reviews</a>
+                </li>
+              </ul>
 
-            <ul class="footer-adress-list list">
-              <li class="footer-adress-item">
-                <p class="footer-adress-text">Obolonsky Prospect, 14, Kyiv</p>
-              </li>
-              <li class="footer-adress-item">
-                <p class="footer-adress-text">Daily 10:00-21:00</p>
-              </li>
-            </ul>
+              <ul class="footer-adress-list list">
+                <li class="footer-adress-item">
+                  <p class="footer-adress-text">Obolonsky Prospect, 14, Kyiv</p>
+                </li>
+                <li class="footer-adress-item">
+                  <p class="footer-adress-text">Daily 10:00-21:00</p>
+                </li>
+              </ul>
 
-            <ul class="footer-tel-list list">
-              <li class="footer-tel-item">
-                <a class="footer-tel-link link" href="">+380669384758</a>
-              </li>
-              <li class="footer-tel-item">
-                <a class="footer-tel-link link" href="">+380679384758</a>
-              </li>
-            </ul>
+              <ul class="footer-tel-list list">
+                <li class="footer-tel-item">
+                  <a class="footer-tel-link link" href="">+380669384758</a>
+                </li>
+                <li class="footer-tel-item">
+                  <a class="footer-tel-link link" href="">+380679384758</a>
+                </li>
+              </ul>
 
-            <div class="container-minimal-link">
-              <a class="minimal-link link" href="./hero.html"
-                >minimal.furniture@gmail.com</a
-              >
+              <div class="container-minimal-link">
+                <a class="minimal-link link" href="./hero.html"
+                  >minimal.furniture@gmail.com</a
+                >
+              </div>
             </div>
-          </div>
 
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
-              <a class="footer-link-social link" href=""
-                ><svg class="footer-social-svg" width="28" height="28">
-                  <use
-                    class="sociale-svg-footer"
-                    href="./img/symbol-defs.svg#icon-Vector"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-link-social link" href=""
-                ><svg class="footer-social-svg" width="28" height="28">
-                  <use
-                    class="sociale-svg-footer"
-                    href="./img/symbol-defs.svg#icon-Vector-2"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-link-social link" href=""
-                ><svg class="footer-social-svg" width="28" height="28">
-                  <use
-                    class="sociale-svg-footer"
-                    href="./img/symbol-defs.svg#icon-Vector-1"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+            <ul class="footer-social-list list">
+              <li class="footer-social-item">
+                <a class="footer-link-social link" href=""
+                  ><svg class="footer-social-svg" width="28" height="28">
+                    <use
+                      class="sociale-svg-footer"
+                      href="./img/symbol-defs.svg#icon-Vector"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-link-social link" href=""
+                  ><svg class="footer-social-svg" width="28" height="28">
+                    <use
+                      class="sociale-svg-footer"
+                      href="./img/symbol-defs.svg#icon-Vector-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-link-social link" href=""
+                  ><svg class="footer-social-svg" width="28" height="28">
+                    <use
+                      class="sociale-svg-footer"
+                      href="./img/symbol-defs.svg#icon-Vector-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <p class="footer-link-policy link">
+            By using this website, you agree to the<a href="">
+              Terms of Service</a
+            >
+            and <a href="">Privacy Policy</a>
+          </p>
         </div>
-        <p class="footer-link-policy link">
-          By using this website, you agree to the<a href="">
-            Terms of Service</a
-          >
-          and <a href="">Privacy Policy</a>
-        </p>
       </section>
     </main>
   </body>
